WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96442
[WK2] REGRESSION(
r127384
): Non-existent directories are no longer created for sandbox paths
https://bugs.webkit.org/show_bug.cgi?id=96442
Summary
[WK2] REGRESSION(r127384): Non-existent directories are no longer created for...
Alexey Proskuryakov
Reported
2012-09-11 16:03:18 PDT
...causing crashes right and left.
Attachments
proposed fix
(6.36 KB, patch)
2012-09-11 16:09 PDT
,
Alexey Proskuryakov
darin
: review+
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-09-11 16:03:37 PDT
<
rdar://problem/12275537
>
Alexey Proskuryakov
Comment 2
2012-09-11 16:09:00 PDT
Created
attachment 163470
[details]
proposed fix
Early Warning System Bot
Comment 3
2012-09-11 17:11:29 PDT
Comment on
attachment 163470
[details]
proposed fix
Attachment 163470
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/13832129
Build Bot
Comment 4
2012-09-11 17:29:12 PDT
Comment on
attachment 163470
[details]
proposed fix
Attachment 163470
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/13819533
Gyuyoung Kim
Comment 5
2012-09-11 18:10:21 PDT
Comment on
attachment 163470
[details]
proposed fix
Attachment 163470
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/13827441
Alexey Proskuryakov
Comment 6
2012-09-12 13:05:42 PDT
Committed <
http://trac.webkit.org/changeset/128352
> with a fix for the issue EWS found.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug