        <rdar://problem/12275537> REGRESSION(r127384): Non-existent directories are no longer created for sandbox paths         https://bugs.webkit.org/show_bug.cgi?id=96442

Reviewed by Darin Adler.

        * Shared/SandboxExtension.h:
        (WebKit::SandboxExtension::createHandleForReadWriteDirectory):
        * Shared/mac/SandboxExtensionMac.mm:
        (WebKit::SandboxExtension::createHandleForReadWriteDirectory):
        Added a function for read-write configuration directories. It matches
        appendReadwriteSandboxDirectory() function behavior from WebProcessMac.mm.

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::createNewWebProcess):
        * UIProcess/mac/WebContextMac.mm:
        (WebKit::WebContext::platformInitializeWebProcess):
        Use the new function for directories that need to be created if they don't exist.



Canonical link: https://commits.webkit.org/114438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128352 268f45cc-cd09-0410-ab3c-d52691b4dbfc